testing/integration/error_without_stack/error_without_stack.out
[ERR] SyntaxError: Invalid or unexpected token
[ERR]     at ./integration/error_without_stack/error_without_stack.js:2:1
