testing/integration/error_without_stack/error_without_stack.js
// Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.
eval(`function main() {
  console.log("asdf);
}
main();`);
